Complete Spring Security authentication and management features